# neuber-correction-server

./: .flake8  .gitignore  .pylintrc  README.md  Taskfile.yml  hello.py  pyproject.toml
app/: main.py
app/api/: __main__.py
app/api/routes/: index_routes.py  material_routes.py  neuber_routes.py
app/db/: interface.py  sqlite3.py
app/models/: database.py  models.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  index.html
app/utils/: session.py  settings.py
db/migrations/: 2025-08-04-init.sql
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
materials/: materials.yaml
server/: neuber-correction-server.service  start_server.bat  start_server.ps1  start_server.sh
tests/: conftest.py  test_api_routes.py  test_database.py  test_hardening_exponent.py  test_main.py  test_models.py  test_utils.py
